[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"
description = "A rust lib template that can publish to crates.io"
authors = ["Zerounary <gmail_ilak@163.com>"]
license = "MIT"
keywords = ["lib", "codegen", "template"]
repository = "https://github.com/Zerounary/rust-lib.git"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
